[SC-9747] fixed video styles on mobile, updated counters styles on small devices

--- a/src/bank-code/dashboard/dashboard.component.less
+++ b/src/bank-code/dashboard/dashboard.component.less
@@ -158,10 +158,15 @@
             background: #991719;
             color: #fff;
             font-size: 34px;
-            padding: 0px 15px;
+            padding: 0 15px;
             margin: 0 3px;
-            font-family: AvianoSans;
-            font-weight: bold;
+            font-family: 'AvianoSans-Bla', sans-serif !important;
+            font-weight: normal;
+            
+            @media all and (max-width: 560px) {
+                font-size: 18px;
+                padding: 6px 12px;
+            }
             
         }
         
@@ -267,8 +272,16 @@
                 padding: 2rem .0rem
             }
             
+            .circular-graphs {
+                width: 90%;
+                display: flex;
+                flex-flow: row wrap;
+                margin: 0 auto;
+            }
+            
             .circular-progress {
-                width: 60px;
+                width: 50%;
+                height: auto;
             }
             
             .counter-1 {
