--- a/src/bank-code/dashboard/welcome-video/welcome-video.component.less
+++ b/src/bank-code/dashboard/welcome-video/welcome-video.component.less
@@ -1,6 +1,9 @@
 :host {
     .vimeo-iframe {
-        height: 270px;
         max-height: 100%;
+        
+        @media all and (min-width: 560px) {
+            height: 270px;
+        }
     }
 }
